[project]
name = "deepcore"
version = "0.1.0"
description = ""
authors = ["mar <marhenrypro@gmail.com>"]
license = "MIT"
readme = "README.md"
dependencies = [
    "langchain>=0.3.18",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.5",
]
